--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "consolidator"
-version = "0.2.1"
+version = "0.2.2"
 edition = "2021"
+rust-version = "1.75"
 
 [dependencies]
 anyhow = "1.0"
@@ -12,10 +13,10 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 tokio = { version = "1", features = ["fs","sync"] }
-# cln-rpc = "0.3"
-cln-rpc = { path="../lightning/cln-rpc/", version = "^0.3" }
-# cln-plugin = "0.3"
-cln-plugin = { path="../lightning/plugins/", version = "^0.3" }
+cln-rpc = "0.4"
+# cln-rpc = { path="../lightning/cln-rpc/", version = "^0.3" }
+cln-plugin = "0.4"
+# cln-plugin = { path="../lightning/plugins/", version = "^0.3" }
 
 bitcoin = "0.31"
 
